# scbe-aethermoore-demo

./: .coverage  .env.example  .gitignore  .gitmodules  .prettierignore  404.html  ACTION_ITEMS_FROM_REVIEW.md  ADVANCED_MATH_TELEMETRY_COMPLETE.md  AETHERMOORE_AI_WORKFLOW_PLATFORM_DRAFT.md  AGENT_README.md  ARCHITECTURE.md  ARCHITECTURE_5_LAYERS.md  ARCHITECTURE_FOR_PILOTS.md  AUDIT_SUMMARY.md  AXIOM_VERIFICATION_STATUS.md  BUILD.sh  CHANGELOG.md  CLEANUP_NOTES.md  CODEBASE_REVIEW_REPORT.md  COMPLETE_INTEGRATION_MASTER.md  COMPLETE_INVENTORY.md  COMPLETE_IP_PORTFOLIO_READY_FOR_USPTO.md  COMPLETE_SYSTEM_OVERVIEW.md  CONTEXT_TRANSFER_SUMMARY.md  DIMENSIONAL_THEORY_COMPLETE.md  DIMENSIONAL_THEORY_VISUAL_SUMMARY.md  Dockerfile  Dockerfile.api  ENABLEMENT_COMPLETE.md  ENTERPRISE_TESTING_COMPLETE.md  ENTERPRISE_TESTING_SUCCESS.md  ENTERPRISE_TESTS_FIXED.md  FINAL_ENGINEERING_STATUS.md  FINAL_SHIPPING_STATUS.md  FINAL_STATUS_REPORT.md  FINAL_SUMMARY.md  FINAL_TEST_REPORT.md  FULL_SYSTEM_ENABLEMENT.md  GITHUB_INTEGRATION_COMPLETE.md  IMPLEMENTATION_STATUS_HONEST.md  (+125 more)
SCBE-AETHERMOORE-v3.0.0/src/: aethermoore.py  index.ts  package-lock.json  package.json  pyproject.toml  scbe_cpse_unified.py  vitest.config.ts
SCBE-AETHERMOORE-v3.0.0/src/.github/workflows/: scbe-tests.yml
SCBE-AETHERMOORE-v3.0.0/src/crypto/: envelope.ts  kms.ts  replayGuard.ts
SCBE-AETHERMOORE-v3.0.0/src/harmonic/: halAttention.ts  spiralSeal.ts
SCBE-AETHERMOORE-v3.0.0/src/lambda/: index.js
SCBE-AETHERMOORE-v3.0.0/src/lambda_tests/: __init__.py
SCBE-AETHERMOORE-v3.0.0/src/physics_sim/: __init__.py  core.py
SCBE-AETHERMOORE-v3.0.0/src/rollout/: canary.ts  circuitBreaker.ts
SCBE-AETHERMOORE-v3.0.0/src/selfHealing/: coordinator.ts  deepHealing.ts  selfHealingOrchestrator.py
SCBE-AETHERMOORE-v3.0.0/src/symphonic_cipher/: __init__.py  ai_verifier.py  core.py  dual_lattice_consensus.py  flat_slope_encoder.py  qasi_core.py  scbe_aethermoore_v2.1_production.py
SCBE-AETHERMOORE-v3.0.0/src/symphonic_cipher/scbe_aethermoore/: PATENT_SPECIFICATION.md  README.md  __init__.py  attack_simulation.py  constants.py  dual_lattice.py  layers_9_12.py  mass_system_grok.py  (+1 more)
(+2480 files in other folders)
